# fast-api-todo

./: .gitignore  Dockerfile.dev  pyproject.toml
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: auth.py  todos.py  users.py
app/core/: config.py  db.py  settings.py
app/crud/: todo.py  user.py
app/lib/: jose.py
app/models/: auth.py  todo.py  user.py
tests/: test_main.py
todo/: main.py
